--- a/src/components/PodcastThumbnail.css
+++ b/src/components/PodcastThumbnail.css
@@ -1,8 +1,7 @@
 .PodcastThumbnail {
-    flex: 1;
     display: flex;
     flex-direction: column;
-    max-width: 200px;
+    width: 200px;
     height: fit-content;
     margin: 1rem;
     border: 1px solid rgba(0,0,0,0.5);
