--- a/src/components/PodcastThumbnail/PodcastThumbnail.css
+++ b/src/components/PodcastThumbnail/PodcastThumbnail.css
@@ -4,10 +4,18 @@
     width: 200px;
     height: fit-content;
     margin: 1rem;
-    border: 1px solid rgba(0,0,0,0.5);
-    border-radius: 1rem;
+    border: 1px solid rgba(0,0,0,0.25);
+    border-radius: 0.5rem;
     overflow: hidden;
     cursor: pointer;
+}
+
+.PodcastThumbnail:hover {
+    background: rgba(0,0,0,0.25);
+}
+
+.PodcastThumbnail a {
+    color: #000000;
 }
 
 .PodcastThumbnail-image {
@@ -24,6 +32,7 @@
 }
 .PodcastThumbnail-name {
     font-weight: 1000;
+    font-size: 1.25rem
 }
 
 .PodcastThumbnail-author {
