--- a/src/routes/MainRoute.css
+++ b/src/routes/MainRoute.css
@@ -1,14 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
-
-#root {
-  display: flex;
-  width: 100%;
-  flex-grow: 1;
-  font-family: 'Open Sans', sans-serif;
-}
 
 .mainContent {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.mainContent-container {
+  max-width: 1000px;
 }
