--- a/src/components/PodcastPlayer/PodcastPlayer.css
+++ b/src/components/PodcastPlayer/PodcastPlayer.css
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 1rem;
 }
 
 .PodcastPlayer-player-controls svg {
@@ -36,13 +37,24 @@
 .PodcastPlayer-player-controls button {
     background: none;
 }
+.PodcastPlayer-player-controls button:hover {
+    outline: none;
+    border: none;
+}
 
 .PodcastPlayer-player-controls button svg  {
     fill: rgba(0,0,0, 1);
-    stroke: rgba(0,0,0, 1)
+    stroke: rgba(0,0,0, 1);
+    transition: transform 0.3s ease-in-out;
 }
+
 
 .PodcastPlayer-player-controls button:hover svg  {
     fill: rgba(0,0,0, 0.5);
     stroke: rgba(0,0,0, 0.5);
+}
+
+.PodcastPlayer-player-controls button:active svg {
+    transform:scale(0.5);
+    
 }
