--- a/src/components/PodcastEpisode/PodcastEpisode.css
+++ b/src/components/PodcastEpisode/PodcastEpisode.css
@@ -38,7 +38,11 @@
 }
 
 .PodcastEpisode-play-button:active {
-    background: rgba(0,0,0, 0.5);
+    background: #525252;
+}
+
+.PodcastEpisode-play-button:hover {
+    background: #525252;
 }
 
 .PodcastEpisode-play-button svg  {
