--- a/src/components/PodcastFeed/PodcastFeed.css
+++ b/src/components/PodcastFeed/PodcastFeed.css
@@ -1,7 +1,9 @@
 .PodcastFeed-Header {
     width: 100%;
     display: flex;
-    margin: 0 0 3rem 0;
+    padding: 0 0 1.5rem 0;
+    margin: 0 0 1.5rem 0;
+    border-bottom: 1px solid #e9e9e9;
 }
 
 .PodcastFeed-Header-image {
@@ -31,7 +33,7 @@
 }
 
 .PodcastFeed-Episode:hover {
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: #e9e9e9;
 }
 .PodcastFeed-Episode:hover a{
     color: #000000;
@@ -40,4 +42,17 @@
 .PodcastFeed-Episode h2 {
     margin: 0 0  1rem 0;
     font-size: 1.5rem;
+}
+
+.PodcastFeed-Episode-date {
+    color: #7f7f7f;
+   
+}
+
+
+@media (max-width: 700px) {
+    .PodcastFeed-Header {
+        flex-direction: column;
+        align-items: center;
+    }
 }
